# flappy-plus-plus

./: .gitignore  :w  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  run.sh
.github/workflows/: ci.yml
include/: Bird.h  Button.h  CollisionManager.h  CustomButton.h  Game.h  GameLoop.h  GameState.h  GreetingsScreenState.h  MenuState.h  Physics.h  Pipe.h  PlayState.h  Utilities.h
src/: Bird.cpp  Button.cpp  CollisionManager.cpp  CustomButton.cpp  Game.cpp  GameLoop.cpp  GreetingsScreenState.cpp  MenuState.cpp  NanoSVG.cpp  Physics.cpp  Pipe.cpp  PlaySate.cpp  Utilities.cpp  main.cpp
